--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <log4j.version>1.2.17</log4j.version>
                 <sonar.host.url>http:18.204.211.185:9000/</sonar.host.url>
                 <sonar.login>b54d49d808edc066508bca36999d7c8235a35e20</sonar.login>
-                <!-- <sonar.password>admin1</sonar.password> -->
+                <!-- <sonar.password>admin</sonar.password> -->
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         </properties>
